--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -29,8 +29,8 @@ jobs:
         pip install setuptools wheel twine
     - name: Build and publish
       env:
-        TWINE_USERNAME: test
-        TWINE_PASSWORD: test3
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: $(BATCHRPCGITHUBTOKEN)
       run: |
         python setup.py sdist bdist_wheel
         twine upload dist/*
