--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -30,8 +30,7 @@ jobs:
     - name: Build and publish
       env:
         TWINE_USERNAME: __token__
-        TWINE_PASSWORD: $(BATCHRPCGITHUBTOKEN)
+        TWINE_PASSWORD: ${{secrets.BATCHRPCGITHUBTOKEN}}
       run: |
         python setup.py sdist bdist_wheel
-        echo $(TEST_SECRET)
         twine upload dist/*
