--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -28,9 +28,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
     - name: Build and publish
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{secrets.BATCHRPCGITHUBTOKEN}}
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+        twine upload dist/* -u __token__ -p ${{secrets.BATCHRPCGITHUBTOKEN}}
