--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Build and publish
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/* -u __token__ -p ${{secrets.PYPI_ORG_TOKEN}}
+        twine upload -u __token__ -p ${{secrets.PYPI_ORG_TOKEN}} dist/*
