--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -29,5 +29,5 @@ jobs:
         pip install setuptools wheel twine
     - name: Build and publish
       run: |
-        python setup.py sdist bdist_wheel
+        python -m build --wheel .
         twine upload -u __token__ -p ${{secrets.PYPI_ORG_TOKEN}} dist/*
