--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -28,6 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
     - name: Build and publish
+      env:
+        TWINE_USERNAME: __token__
+        TWINE_PASSWORD: ${{secrets.PYPI_ORG_TOKEN}}
       run: |
-        python -m build --wheel .
-        twine upload -u __token__ -p ${{secrets.PYPI_ORG_TOKEN}} dist/*
+        python setup.py sdist bdist_wheel
+        twine upload dist/*
