--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -12,6 +12,22 @@ on:
       - release/*
 
 jobs:
+  test:
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install aiohttp
+          pip install unittest
+          pip install .
+      run: |
+        python test/test_simple.py
+
   deploy:
 
     runs-on: ubuntu-latest
