--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -13,25 +13,25 @@ on:
 
 jobs:
   test:
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install aiohttp
-          pip install unittest
-          pip install .
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
       run: |
-        python test/test_simple.py
+        python -m pip install --upgrade pip
+        pip install aiohttp
+        pip install unittest
+        pip install .
+    - name: Run tests
+      run: |
+      python test/test_simple.py
 
   deploy:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python
