--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set github tag
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "GITHUB_RELEASE_VER=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Show github release version
         run: |
-          echo $RELEASE_VERSION
-          echo ${{ env.RELEASE_VERSION }}
+          echo $GITHUB_RELEASE_VER
+          echo ${{ env.GITHUB_RELEASE_VER }}
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
